content/terraform-enterprise/1.2.x/docs/enterprise/deploy/reference/configuration.mdx
---
page_title: Terraform Enterprise configuration reference
description: >-
  Learn about the configuration options for deploying Terraform Enterprise.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-09-04T14:33:49.000Z
# END AUTO GENERATED METADATA
---

# Terraform Enterprise configuration reference

This topic contains reference information about the configurations you can specify for Terraform Enterprise.

## Introduction

Specify environment variables to configure the operational mode, connections to external systems, and other settings. Specify the variables in a configuration file for your runtime environment, such as a
[Docker Compose file](https://docs.docker.com/compose/compose-file/), Kubernetes [Helm chart](https://helm.sh/), or in the `env` block of your [Nomad job](/nomad/docs/job-specification/env). Refer to [Create deployment configuration overview](/terraform/enterprise/deploy/configuration) for additional information.


## Application settings

### `TFE_CAPACITY_CONCURRENCY`

Maximum number of Terraform runs that can execute concurrently on each
Terraform Enterprise node. Defaults to `10`.

### `TFE_CAPACITY_CPU`

Maximum number of CPU cores a Terraform run is allowed to use. Set to `0` for
no limit. Defaults to `0`.
Ignored if `TFE_RUN_PIPELINE_DRIVER` is set to `nomad`.

### `TFE_CAPACITY_MEMORY`

Maximum amount of memory (MiB) a Terraform run is allowed to use. Defaults to
`2048`.
Ignored if `TFE_RUN_PIPELINE_DRIVER` is set to `nomad`.

### `TFE_ATLAS_YJIT_ENABLED`

Enables Ruby's YJIT compiler for improved performance of the Atlas Rails application and Sidekiq worker processes. YJIT compiles frequently executed code to machine code, providing performance gains most noticeable under sustained load.

Performance improvements vary by workload but are typically most beneficial for high-traffic deployments.

Defaults to `false`.

### `TFE_ATLAS_WEB_WORKER_COUNT`

Number of web worker processes for the Atlas Rails application.

Higher values can improve response times under heavy load but increase memory usage.

The minimum is `1` and  the maximum is `10`. Defaults to CPU count ÷ 2. 

## Atlas database tuning

### `TFE_ATLAS_DB_POOL`

Database connection pool size for the Atlas Rails application. 

Increase this value if you experience connection timeouts or slow web interface performance during peak usage. Larger pools improve performance under high load but consume more database resources.

Must be between `16` and `128`. Defaults to `16`.

### `TFE_ATLAS_SIDEKIQ_DB_POOL`

Database connection pool size for Sidekiq background worker processes.

Increase this value if you notice slow job processing or job queue backlogs. Background jobs perform many database operations, so adequate pool sizing is important for processing performance.

Must be between `16` and `128`. Defaults to `16`.

## Atlas process management

### `TFE_ATLAS_ROTATE_ENABLED`

Enables automatic Puma web server process rotation to maintain application stability and manage memory usage.

When enabled, Puma worker processes restart based on memory thresholds or scheduled intervals. This helps establish a ceiling of memory consumption for Puma processes

Enable this setting if you experience memory growth or want fresh worker processes on a regular schedule.

Defaults to `false`.

### `TFE_ATLAS_ROTATE_CRON`

Cron expression for scheduled Puma process rotation when `TFE_ATLAS_ROTATE_ENABLED` is `true`.

Use standard cron syntax. For example, `0 2 * * *` restarts workers daily at 2:00 AM. 

### `TFE_ATLAS_ROTATE_MEMORY_THRESHOLD`

Memory threshold that triggers automatic Puma process rotation. Specify using human-readable format, for example `4GB`, `2048MB`.

When total memory usage of all Puma processes exceeds this threshold, workers restart. This prevents out-of-memory conditions and maintains consistent performance.

Minimum threshold is `2GB`. Only takes effect when `TFE_ATLAS_ROTATE_ENABLED` is `true`.

### `TFE_ATLAS_DISABLE_CRITICAL_SIDEKIQ_WORKER`

Disables the dedicated Sidekiq worker pool that processes critical and high-priority background jobs.

Terraform Enterprise runs two Sidekiq worker pools. One pool is for all job queues and the second is exclusively for critical jobs. This ensures important operations aren't delayed by lower-priority work.

This is an emergency setting. Only enable when directed by HashiCorp support.

Defaults to `false`.

### `TFE_ENCRYPTION_PASSWORD`

Encryption password used to encrypt and decrypt the internal Vault root token
and unseal key.

Required when `TFE_VAULT_USE_EXTERNAL` is `false`.

### `TFE_HOSTNAME`

Hostname where Terraform Enterprise is accessed (e.g.,
`terraform.example.com`).

Required always.

### `TFE_HOSTNAME_SECONDARY`

Specifies a secondary hostname for Terraform Enterprise. You can use this setting for external-facing endpoints, such as OIDC workload identity federation. This hostname must be externally resolvable and configured with appropriate DNS and TLS settings, for example `tfe-external.example.com`.

 Refer to [Configure network access](/terraform/enterprise/deploy/configuration/network) for additional information.


### `TFE_LICENSE`

The raw HashiCorp license (e.g., `02MV4UU4...MSEKE6T2`). Defaults to `""`.

Required when `TFE_LICENSE_PATH` is unset.

### `TFE_LICENSE_PATH`

Path to a file containing the raw HashiCorp license. Must be mounted inside the
container (e.g., `/opt/terraform-enterprise-license`). Defaults to `""`.

Required when `TFE_LICENSE` is unset.

### `TFE_LICENSE_REPORTING_OPT_OUT`

Whether to opt out of reporting licensing information to HashiCorp. Defaults to `false`.

### `TFE_USAGE_REPORTING_OPT_OUT`

Whether to opt out of reporting usage information to HashiCorp. Defaults to `false`.

### `TFE_RUN_PIPELINE_DRIVER`

Driver for Terraform runs. Must be one of `nomad`, `docker` or `kubernetes`. Defaults to
`docker`.
If set to `nomad`, the `TFE_CAPACITY_CPU` and `TFE_CAPACITY_MEMORY` settings are ignored.

Required for all deployment options.

### `TFE_OPERATIONAL_MODE`

Determines how Terraform Enterprise stores and retrieves data. This variable is required for all runtimes except Kubernetes.

You can set one of the following values:

- `disk`: Runs Terraform Enterprise, PostgreSQL database, optional Redis data store, and S3-compatible storage in the same container. In this mode, Terraform Enterprise manages the storage objects. By default, this mode limits the number of Terraform Enterprise instances to one.
- `external`: Runs Terraform and optional Redis store in the same container. In this mode, Terraform Enterprise can manage the Redis store, but you are responsible for managing the PostgreSQL database and S3-compatible storage as external services. By default, this mode limits the number of Terraform Enterprise instances to one.
- `active-active`: Runs Terraform Enterprise in its own container. In this mode, you are responsible for managing the PostgreSQL, optional Redis data store, and S3-compatible storage as external services. As a result, you can deploy more than one instance of Terraform Enterprise. Terraform Enterprise operates in `active-active` mode when it is deployed to Kubernetes.

Refer to [Configure the operational mode](/terraform/enterprise/deploy/configuration/storage/configure-mode) for additional information.

### `TFE_RUN_PIPELINE_IMAGE`

Container image used to execute Terraform runs. Leave blank to use the default
image that comes with Terraform Enterprise. Defaults to `""`.

### `TFE_RUN_PIPELINE_DOCKER_REGISTRY_AUTH_USERNAME`

If the container image used to execute Terraform runs is stored in a private registry,
provide the username to access the image using basic authentication.

### `TFE_RUN_PIPELINE_DOCKER_REGISTRY_AUTH_PASSWORD`

If the container image used to execute Terraform runs is stored in a private registry,
provide the password to access the image using basic authentication.

### `TFE_DISK_PATH`

Path where Terraform Enterprise stores application data. Must be backed by
persistent and performant storage such as a container volume or block storage.
Defaults to `/var/lib/terraform-enterprise`.

Required when `TFE_OPERATIONAL_MODE` is `disk` on Docker runtime.

### `TFE_BACKUP_RESTORE_TOKEN`

The authentication token for the backup/restore API. Leave blank to have it be automatically generated. Defaults to `""`.

### `TFE_HTTP_PORT`

Port application listens on for HTTP. Default `80`.

### `TFE_HTTPS_PORT`

Port application listens to HTTPS on. Default `443`.

## Database settings

### `TFE_DATABASE_HOST`

The PostgreSQL server to connect to in the format `HOST[:PORT]` (e.g.,
`db.example.com` or `db.example.com:5432`). If only `HOST` is provided then the
`:PORT` defaults to `:5432`. Multi host connection strings are not supported.

Required when connecting to an external PostgreSQL server.

### `TFE_DATABASE_NAME`

Name of the PostgreSQL database to store application data in.

Required when connecting to an external PostgreSQL server.

### `TFE_DATABASE_PARAMETERS`

PostgreSQL server parameters for the connection URI. Used to configure the
PostgreSQL connection (e.g., `sslmode=require`).

### `TFE_DATABASE_PASSWORD`

PostgreSQL password.

Can be used together with `TFE_DATABASE_USE_MTLS`. Not required when using passwordless authentication.

### `TFE_DATABASE_USER`

PostgreSQL user.

Required when connecting to an external PostgreSQL server.

### `TFE_DATABASE_USE_MTLS`

Whether to use mTLS while authenticating with the PostgreSQL server. When mTLS is enabled, Terraform Enterprise uses client certificates to authenticate with the PostgreSQL server.
Terraform Enterprise requires PostgreSQL server certificate to use Subject Alternative Names (SANs) rather than relying solely on the legacy Common Name field.

Defaults to `false`.

### `TFE_DATABASE_CA_CERT_FILE`

Specifies the path to a file containing the root certificate for validating PostgreSQL server certificates.
Defaults to `""`.

Required when `TFE_DATABASE_USE_MTLS` is `true`.

### `TFE_DATABASE_CLIENT_CERT_FILE`

Specifies the path to a file containing the client certificate that Terraform Enterprise uses for authenticating with the PostgreSQL server.
Defaults to `""`.

Required when `TFE_DATABASE_USE_MTLS` is `true`.

### `TFE_DATABASE_CLIENT_KEY_FILE`

Specifies the path to a file containing the client private key corresponding to the PostgreSQL client certificate provided in `TFE_DATABASE_CLIENT_CERT_FILE`.
Defaults to `""`.

Required when `TFE_DATABASE_USE_MTLS` is `true`.

### `TFE_DATABASE_PASSWORDLESS_AWS_USE_INSTANCE_PROFILE`

Whether to use Identity and Access Management (IAM) for database authentication. 
Defaults to `false`.

### `TFE_DATABASE_PASSWORDLESS_AWS_REGION`

AWS Region of the RDS PostgreSQL resource. Defaults to `""`.

### `TFE_DATABASE_PASSWORDLESS_AZURE_USE_MSI`

Whether to use Managed Service Identity (MSI) for database authentication. 
Defaults to `false`.

### `TFE_DATABASE_PASSWORDLESS_AZURE_CLIENT_ID`

Client ID of a user-assigned Managed Service Identity. Leave blank to use the
system-assigned Managed Service Identity. Defaults to `""`.

### `TFE_DATABASE_PASSWORDLESS_GOOGLE_USE_DEFAULT_CREDENTIALS`

Whether to use Default Credentials for database authentication.
Defaults to `false`.

## Explorer settings for passwordless IAM authentication

Configure the settings that apply to your install to enable passwordless IAM authentication for the Explorer database.

### `TFE_EXPLORER_DATABASE_PASSWORDLESS_AWS_USE_INSTANCE_PROFILE`

Whether to use Identity and Access Management (IAM) for Explorer database authentication. Defaults to `false`.

### `TFE_EXPLORER_DATABASE_PASSWORDLESS_AWS_REGION`

AWS Region of the Explorer RDS PostgreSQL resource. Defaults to `""`.

### `TFE_EXPLORER_DATABASE_AUTH_USE_AZURE_MSI`

Whether to use Managed Service Identity (MSI) for Explorer database authentication. Defaults to `false`.

### `TFE_EXPLORER_DATABASE_AUTH_AZURE_CLIENT_ID`

Client ID of a user-assigned Managed Service Identity. Leave blank to use the system-assigned Managed Service Identity. Defaults to `""`.

### `TFE_EXPLORER_DATABASE_AUTH_USE_GCP_IAM`

Whether to use Default Credentials for Explorer database authentication. Defaults to `false`.

## Database cluster setting

### `TFE_DATABASE_MONITOR_ENABLED`

Enables Terraform Enterprise to reconnect to the database when the database connection is interrupted. We recommend setting to `true` when connecting to an external PostgreSQL cluster. Refer to [Connect to a PostgreSQL cluster ](/terraform/enterprise/deploy/configuration/storage/connect-database/postgres-cluster) for additional information.

This setting is not applicable for Replicated.

Default is `false`.

### `TFE_DATABASE_MONITOR_INTERVAL`

When `TFE_DATABASE_MONITOR_ENABLED` is set to `true`, this option specifies the database connection health check interval.
Set it to any positive [Go duration string](https://pkg.go.dev/time#ParseDuration).


This setting is not applicable for Replicated.

Default is `1s`.

## Redis settings

### `TFE_REDIS_HOST`

The Redis server to connect to in the format `HOST[:PORT]` (e.g.,
`redis.example.com` or `redis.example.com:`). If only `HOST` is provided then
the `:PORT` defaults to `:6379`.

Required when Redis server is externalized.

### `TFE_REDIS_USE_AUTH`

Must be `true` or `false`. `true` indicates Redis server is configured to use `TFE_REDIS_PASSWORD` and `TFE_REDIS_USER` (optional) for authentication. Defaults to `false`.

### `TFE_REDIS_USE_TLS`

Must be `true` or `false`. `true` indicates to use TLS to access Redis. Defaults to `false`.

### `TFE_REDIS_USE_MTLS`

Must be `true` or `false`. `true` indicates to use mutual TLS (mTLS) authentication for clients to access Redis with Redis standalone or Sentinel. Defaults to `false`. Can not be `true` if `TFE_REDIS_USER` and `TFE_REDIS_PASSWORD` is specified.

### `TFE_REDIS_CLIENT_CERT_PATH`

If using mTLS with Redis standalone, path to the client certificate file to be used for mTLS authentication with Redis server. Required when `TFE_REDIS_USE_MTLS` is `true`.

### `TFE_REDIS_CA_CERT_PATH`

If using mTLS with Redis standalone, path to the certificate authority file to validate the certificate. Required when `TFE_REDIS_USE_MTLS` is `true`.

### `TFE_REDIS_CLIENT_KEY_PATH`

If using mTLS with Redis standalone, path to the private key file corresponding to the client certificate. Required when `TFE_REDIS_USE_MTLS` is `true`.

### `TFE_REDIS_USER`

Redis server user. This value is required when `TFE_REDIS_USE_AUTH` is set to `true`, and Redis server is configured to use username for authentication. There is no need to set this config when running Redis server internally as credential is not required. Can not be used if `TFE_REDIS_USE_MTLS` is set to `true`.

### `TFE_REDIS_PASSWORD`

Redis server password. This value is required when `TFE_REDIS_USE_AUTH` is set to `true`. There is no need to set this config when running Redis server internally as credential is not required. Can not be used if `TFE_REDIS_USE_MTLS` is set to `true`.

### `TFE_REDIS_SIDEKIQ_HOST`

The Redis server to connect to in the format `HOST[:PORT]` (e.g.,
`redis.example.com` or `redis.example.com:`). If only `HOST` is provided then
the `:PORT` defaults to `:6379`.

Required when Redis server is externalized and Redis Enterprise is the external
service target.

### `TFE_REDIS_SIDEKIQ_USE_AUTH`

Must be `true` or `false`. `true` indicates Redis server is configured to use `TFE_REDIS_SIDEKIQ_PASSWORD` and `TFE_REDIS_SIDEKIQ_USER` (optional) for authentication. Defaults to `false`.

### `TFE_REDIS_SIDEKIQ_USE_TLS`

Must be `true` or `false`. `true` indicates to use TLS to access Redis. Defaults to `false`.

### `TFE_REDIS_SIDEKIQ_USER`

Redis server user. This value is required when `TFE_REDIS_SIDEKIQ_USE_AUTH` is set to `true`, and Redis server is configured to use username for authentication. There is no need to set this config when running Redis server internally as credential is not required.

### `TFE_REDIS_SIDEKIQ_PASSWORD`

Redis server password. This value is required when `TFE_REDIS_SIDEKIQ_USE_AUTH` is set to `true`. There is no need to set this config when running Redis server internally as credential is not required.

### `TFE_REDIS_SIDEKIQ_USE_MTLS`

Must be `true` or `false`. `true` indicates to use mutual TLS (mTLS) authentication for clients to access Redis with Redis Enterprise. Defaults to `false`. 

### `TFE_REDIS_SIDEKIQ_CLIENT_CERT_PATH`

If using mTLS with Redis Enterprise, path to the client certificate file to be used for mTLS authentication with Redis server.

### `TFE_REDIS_SIDEKIQ_CA_CERT_PATH`

If using mTLS with Redis Enterprise, path to the certificate authority file to validate the certificate.

### `TFE_REDIS_SIDEKIQ_CLIENT_KEY_PATH`

If using mTLS with Redis Enterprise, path to the private key file corresponding to the client certificate.

### `TFE_REDIS_SENTINEL_ENABLED`

Must be `true` or `false`. `true` indicates Redis Sentinel is configured. Defaults to `false`.

### `TFE_REDIS_SENTINEL_HOSTS`

Specifies one or more Redis Sentinel server addresses to connect to using the `HOST:PORT` format. The port number is optional and defaults to `:26379` when only the host address is provided.

The following example specifies two servers. The first server uses the default port number. The second server is configured to explicitly listen on port `26379`:

```yaml
TFE_REDIS_SENTINEL_HOSTS: redis-sentinel-1.example.com,redis-sentinel-2.example.com:26379
```

Required when `TFE_REDIS_SENTINEL_ENABLED` is set to `true`.

### `TFE_REDIS_SENTINEL_LEADER_NAME`

The name of a Redis Sentinel master such as `main`. This name should return a valid Redis service location when issuing
a `SENTINEL GET-MASTER-ADDR-BY-NAME <TFE_REDIS_SENTINEL_LEADER_NAME>` command to Redis Sentinel.

Required when `TFE_REDIS_SENTINEL_ENABLED` is set to `true`.

### `TFE_REDIS_SENTINEL_USERNAME`

Redis Sentinel server user.

### `TFE_REDIS_SENTINEL_PASSWORD`

Redis Sentinel server password.

### `TFE_REDIS_PASSWORDLESS_AZURE_USE_MSI`

Whether to use Managed Service Identity (MSI) for Redis authentication. Defaults to `false`.

### `TFE_REDIS_SIDEKIQ_PASSWORDLESS_AZURE_USE_MSI`

Whether to use Managed Service Identity (MSI) for Redis authentication used by Sidekiq. Defaults to `false`.

### `TFE_REDIS_PASSWORDLESS_AZURE_CLIENT_ID`

Client ID of a user-assigned Managed Service Identity. Leave blank to use the system-assigned Managed Service Identity. Defaults to `""`.

### `TFE_REDIS_SIDEKIQ_PASSWORDLESS_AZURE_CLIENT_ID`

Client ID of a user-assigned Managed Service Identity. Leave blank to use the system-assigned Managed Service Identity. Defaults to `""`.

### `TFE_REDIS_PASSWORDLESS_AWS_USE_INSTANCE_PROFILE`

Whether to use Identity and Access Management (IAM) for Redis authentication. Defaults to `false`.

### `TFE_REDIS_SIDEKIQ_PASSWORDLESS_AWS_USE_INSTANCE_PROFILE`

Whether to use Identity and Access Management (IAM) for Redis authentication used by Sidekiq. Defaults to `false`.

### `TFE_REDIS_PASSWORDLESS_AWS_REGION`

AWS Region of the AWS ElastiCache resource. Defaults to `""`.

### `TFE_REDIS_SIDEKIQ_PASSWORDLESS_AWS_REGION`

AWS Region of the AWS ElastiCache resource. Defaults to `""`.

### `TFE_REDIS_PASSWORDLESS_AWS_HOST_NAME`

The name of the Redis instance on AWS. Defaults to `""`.

### `TFE_REDIS_SIDEKIQ_PASSWORDLESS_AWS_HOST_NAME`

The name of the Redis instance on AWS. Defaults to `""`.

## Initial admin creation token

### `TFE_IACT_TOKEN`
A pre-populated initial admin creation token. If you do not set this value, a random one will be generated for you.

### `TFE_IACT_SUBNETS`

Comma-separated list of subnets in CIDR notation that are allowed to retrieve
the initial admin creation token via the API (e.g.,
`10.0.0.0/8,192.168.0.0/24`). Leave blank to disable retrieving the initial
admin creation token via the API from outside the host. Defaults to
`""`.

If you do not set this value, you must gain access to the container or pod command line and run `curl  http://localhost:80/admin/retrieve-iact` to retrieve the initial admin token.

### `TFE_IACT_TIME_LIMIT`

Number of minutes that the initial admin creation token can be retrieved via
the API after the application starts. Defaults to `60`.

### `TFE_IACT_TRUSTED_PROXIES`

Comma-separated list of proxy IP addresses that are allowed to retrieve the initial admin creation token via the API. Leave blank to disable retrieving the initial admin creation token through a proxy. Defaults to `""`.

## Network settings

### `http_proxy`
Configures the proxy address to use for HTTP requests, for example `http://proxy.example.com:8080`. For proxy servers that require a username and password, use HTML character encoding to specify special characters. Leave empty to disable using a proxy server. Defaults to `""`.

### `https_proxy`
Configures the proxy address to use for HTTPS requests, for example `http://proxy.example.com:8080`. For proxy servers that require a username and password, use HTML character encoding to specify special characters. Leave empty to disable using a proxy server. Defaults to `""`.

### `no_proxy`
Specifies a list of domains that instances, such as S3, are allowed to connect directly to without going through the proxy, for example `localhost,127.0.0.1`. Defaults to `""`.
When defining a proxy, this should include following addresses `127.0.0.1,localhost,<IP ADDRESS OF TFE INSTANCE>,<HOSTNAME OF TFE INSTANCE>` but is not limited to.

### `TFE_IPV6_ENABLED`

Enables Terraform Enterprise to listen on IPv6 and IPv4 addresses. When set to `false`, Terraform listens on IPv4 addresses only.

Default is `false`.

### `TFE_OIDC_HOSTNAME_CHOICE`

Specifies which hostname Terraform Enterprise should use to federate OIDC workloads for OIDC-related integrations. You can specify one of the following values:

- `primary`: Terraform Enterprise uses the hostname specified in the [`TFE_HOSTNAME`](#tfe_hostname) setting.
- `secondary`: Terraform Enterprise uses the hostname specified in the [`TFE_HOSTNAME_SECONDARY`](#tfe_hostname_secondary) setting.

Default is `primary`.

### `TFE_VCS_HOSTNAME_CHOICE`

Specifies which hostname Terraform Enterprise should use to federate version control system (VCS) workloads for VCS-related integrations. You can specify one of the following values:

- `primary`: Terraform Enterprise uses the hostname specified in the `TFE_HOSTNAME` setting.
- `secondary`: Terraform Enterprise uses the hostname specified in the `TFE_HOSTNAME_SECONDARY` setting.

You must set up new VCS connections if you update the `TFE_VCS_HOSTNAME_CHOICE` configuration. When `TFE_VCS_HOSTNAME_CHOICE` is set to `secondary`, you should continue using the secondary hostname while setting up the new VCS connection. When setup is complete, you can use the primary hostname for all other activities.

Refer to [Configure a VCS host for Terraform Enterprise](/terraform/enterprise/vcs#configure-a-vcs-host-for-terraform-enterprise) for additional information.

Default is `primary`.

### `TFE_RUN_TASK_HOSTNAME_CHOICE`

Specifies which hostname Terraform Enterprise should use to federate run task workloads for custom integrations. You can specify one of the following values:

- `primary`: Terraform Enterprise uses the hostname specified in the `TFE_HOSTNAME` setting.
- `secondary`: Terraform Enterprise uses the hostname specified in the `TFE_HOSTNAME_SECONDARY` setting.

Default is `primary`.

### `TFE_ADMIN_HTTPS_PORT`

Specifies the port that the [system API endpoints](/terraform/enterprise/api-docs/index#system-endpoints-overview) listen on for HTTPS requests.
Defaults to `8443`.

## Observability settings

### `TFE_ADMIN_CONSOLE_DISABLED`

Disables the admin console web-based administrative interface for managing and monitoring Terraform Enterprise deployments.

Defaults to `false`.

### `TFE_LOG_FORWARDING_CONFIG_PATH`

The path to a file containing valid Fluent Bit `[OUTPUT]` configuration. The
contents of the file you specify are appended to your existing Fluent Bit
configuration if you set `TFE_LOG_FORWARDING_ENABLED` to `true`.
Refer to [Enable log forwarding](/terraform/enterprise/deploy/manage/monitor#enable-log-forwarding)
for more information.

This setting is not applicable for Kubernetes.

### `TFE_LOG_FORWARDING_ENABLED`

Whether to enable log forwarding. Defaults to `false`.

This setting is not applicable for Kubernetes.

### `TFE_LOG_LEVEL`

Sets Terraform Enterprise application log verbosity to `trace`, `debug`,
`info`, `warn`, `error`, or `off` (case-insensitive). Defaults to `info`.

For other logs, use [`TFC_AGENT_LOG_LEVEL`](/terraform/cloud-docs/agents/logging#log-verbosity-and-levels)
for HCP Terraform Agents or [`TF_LOG`, `TF_LOG_CORE`, and
`TF_LOG_PROVIDER`](/terraform/internals/debugging) for Terraform runs.
`TFE_LOG_FORWARDING_ENABLED` and `TFE_LOG_FORWARDING_CONFIG_PATH` configure log
forwarding, not verbosity.

### `TFE_METRICS_ENABLE`

Whether to enable metrics collection. Defaults to `false`.

### `TFE_METRICS_HTTP_PORT`

The HTTP port that metrics will be exposed on. Defaults to `9090`.

### `TFE_METRICS_HTTPS_PORT`

The HTTPS port that metrics will be exposed on. Defaults to `9091`.

## Object storage settings

### `TFE_OBJECT_STORAGE_TYPE`

Type of object storage to use. Must be one of `s3`, `azure`, or `google`.

Required when object storage is externalized.

### Azure blob Storage settings

#### `TFE_OBJECT_STORAGE_AZURE_ACCOUNT_KEY`

Azure Blob Storage access key.

Required when `TFE_OBJECT_STORAGE_TYPE` is `azure` and
`TFE_OBJECT_STORAGE_AZURE_USE_MSI` is `false`.

#### `TFE_OBJECT_STORAGE_AZURE_ACCOUNT_NAME`

Azure Blob Storage account name.

Required when `TFE_OBJECT_STORAGE_TYPE` is `azure`.

#### `TFE_OBJECT_STORAGE_AZURE_CLIENT_ID`

Client ID of a user-assigned Managed Service Identity. Leave blank to use the
system-assigned Managed Service Identity. Defaults to `""`.

#### `TFE_OBJECT_STORAGE_AZURE_CONTAINER`

Azure Blob Storage container name.

Required when `TFE_OBJECT_STORAGE_TYPE` is `azure`.

#### `TFE_OBJECT_STORAGE_AZURE_ENDPOINT`

Azure Storage endpoint. Useful if using a private endpoint for Azure Storage.
Leave blank to use the default Azure Storage endpoint. Defaults to `""`.

#### `TFE_OBJECT_STORAGE_AZURE_USE_MSI`

Whether to use Managed Service Identity (MSI) for authentication. Defaults to
`false`.

### Google Cloud Platform storage

#### `TFE_OBJECT_STORAGE_GOOGLE_BUCKET`

Google Cloud Storage bucket name.

Required when `TFE_OBJECT_STORAGE_TYPE` is `google`.

#### `TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS`

Google Cloud Storage JSON credentials. Must be given as an escaped string of
JSON or Base64 encoded JSON. Leave blank to use the attached service account.
Defaults to `""`.

#### `TFE_OBJECT_STORAGE_GOOGLE_PROJECT`

Google Cloud Storage project name.

Required when `TFE_OBJECT_STORAGE_TYPE` is `google`.

### S3-compatible Storage

#### `TFE_OBJECT_STORAGE_S3_ACCESS_KEY_ID`

S3 access key ID.

Required when `TFE_OBJECT_STORAGE_TYPE` is `s3` and
`TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE` is `false`.

#### `TFE_OBJECT_STORAGE_S3_BUCKET`

S3 bucket name.

Required when `TFE_OBJECT_STORAGE_TYPE` is `s3`.

#### `TFE_OBJECT_STORAGE_S3_ENDPOINT`

S3 endpoint. Useful when using a private S3 endpoint. Leave blank to use the
default AWS S3 endpoint. Defaults to `""`.

#### `TFE_OBJECT_STORAGE_S3_REGION`

S3 region.

Required when `TFE_OBJECT_STORAGE_TYPE` is `s3`.

#### `TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY`

S3 secret access key.

Required when `TFE_OBJECT_STORAGE_TYPE` is `s3` and
`TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE` is `false`.

#### `TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION`

Server-side encryption algorithm to use. Leave blank to have the AWS SDK use a
default value. Set to `AES256` to use AES-256 encryption, the AWS S3 default
since January 5, 2023. Set to `aws:kms` to use an AWS KMS key to encrypt data
in which case you must specify
`TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION_KMS_KEY_ID`. Defaults to `""`.

#### `TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION_KMS_KEY_ID`

KMS key ID to use for server-side encryption. Leave blank to use AWS-managed
keys. Defaults to `""`.

#### `TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE`

Whether to use the default AWS credential chain for authentication. When set to `true`, Terraform Enterprise attempts to authenticate to AWS using the following workload identities:

- EC2 IAM instance profile
- IAM roles for Kubernetes service accounts (IRSA)
- EKS pod identity

Defaults to `false`.

#### `TFE_OBJECT_STORAGE_S3_UPLOAD_PART_SIZE`

Optional configuration of the size of the data packets sent to S3. Defaults to `1024` if left blank.

#### `TFE_OBJECT_STORAGE_S3_UPLOAD_CONCURRENCY`

Optional configuration of the concurrency when sending data to S3. Defaults to `3` if left blank.

#### `TFE_OBJECT_STORAGE_S3_ENABLE_MD5_VALIDATION`

When set to `true`, enables MD5 checksums in place of more advanced data integrity options not yet supported by all 3rd party S3 storage solutions.


## TLS settings

### `TFE_TLS_CA_BUNDLE_FILE`

Path to a file containing TLS CA certificates to be added to the OS CA
certificates bundle. Leave blank to not add CA certificates to the OS CA
certificates bundle. Defaults to `""`.

### `TFE_TLS_CERT_FILE`

Path to a file containing the TLS certificate Terraform Enterprise will use
when serving TLS connections to clients.

Required always.

### `TFE_TLS_CERT_FILE_SECONDARY`

Specifies the path to the TLS certificate file used for the secondary hostname, for example `/etc/ssl/private/terraform-enterprise/ext_cert.pem`.

Configure this setting to secure HTTPS connections for external integrations using the secondary hostname.

This settings is required when [`TFE_HOSTNAME_SECONDARY`](#tfe_hostname_secondary) is set.

### `TFE_TLS_CIPHERS`

TLS ciphers to use for TLS. Must be valid OpenSSL format. Leave blank to use
the default ciphers. Defaults to `""`.

### `TFE_TLS_ENFORCE`

Whether or not to enforce TLS, Strict-Transport-Security headers, and secure
cookies. Defaults to `false`.

### `TFE_TLS_KEY_FILE`

Path to a file containing the TLS private key Terraform Enterprise will use
when serving TLS connections to clients.

### `TFE_TLS_KEY_FILE_SECONDARY`

Specifies the path to the TLS private key file used for the secondary hostname, for example `/etc/ssl/private/terraform-enterprise/ext_key.pem`.

You must also configure the [`TFE_TLS_CERT_FILE_SECONDARY`](#tfe_tls_cert_file_secondary) setting to enable secure HTTPS connections.

This settings is required when [`TFE_HOSTNAME_SECONDARY`](#tfe_hostname_secondary) is set.

### `TFE_TLS_REQUIRE_SMTP`

Whether to require TLS when connecting to SMTP servers. When set to `true`, the application will raise an error if it cannot upgrade SMTP connections to TLS. Defaults to `false`.

### `TFE_TLS_VERSION`

TLS version to use. Must be one of `tls_1_2`, `tls_1_3`, or blank. Leave blank
to use both TLS v1.2 and TLS v1.3. Defaults to `""`.

## Vault settings

### `TFE_VAULT_ADDRESS`

Address of the external Vault server (e.g., https://vault.example.com:8200).
Defaults to `""`.

Required when `TFE_VAULT_USE_EXTERNAL` is `true`.

### `TFE_VAULT_CLUSTER_ADDRESS`

Cluster URL of the internal Vault server on this node (e.g.,
http://192.168.0.1:8201). Must be reachable across nodes. Defaults to
`http://{{ GetPrivateIP }}:8201`.

Required when `TFE_OPERATIONAL_MODE` is `active-active`.

### `TFE_VAULT_DISABLE_MLOCK`

Disable mlock for internal Vault. Defaults to `false`.

### `TFE_VAULT_NAMESPACE`

Vault namespace. External Vault only. Leave blank to use the default namespace.
Defaults to `""`.

### `TFE_VAULT_PATH`

Vault path when AppRole is mounted. External Vault only. Defaults to
`auth/approle`.

### `TFE_VAULT_ROLE_ID`

Vault role ID. External Vault only.

Required when `TFE_VAULT_USE_EXTERNAL` is `true`.

### `TFE_VAULT_SECRET_ID`

Vault secret ID. External Vault only.

Required when `TFE_VAULT_USE_EXTERNAL` is `true`.

### `TFE_VAULT_TOKEN_RENEW`

How often, in seconds, to renew the Vault token. External Vault only. Defaults
to `3600`.

### `TFE_VAULT_USE_EXTERNAL`

Whether to use external Vault. Defaults to `false`.

## Docker driver settings

### `TFE_RUN_PIPELINE_DOCKER_EXTRA_HOSTS`

Comma-separated list of extra hosts in the format `HOST:IP,HOST:IP` to set in
the `/etc/hosts` file within the container used to execute Terraform runs.
Leave blank to not set any extra hosts. Defaults to `""`.

### `TFE_RUN_PIPELINE_DOCKER_NETWORK`

Network where the container used to execute Terraform runs will be created. The
network must already exist, it will not be created automatically. Leave blank
to use the default network. Defaults to `""`.

### `TFE_DISK_CACHE_PATH`

Path where Terraform Enterprise caches Terraform binaries. The volume specified
in `TFE_DISK_CACHE_VOLUME_NAME` must be mounted to this path. Defaults to
`/var/cache/tfe-task-worker`.

Required when `TFE_RUN_PIPELINE_DRIVER` is `docker`.

### `TFE_DISK_CACHE_VOLUME_NAME`

Container volume name backing the `TFE_DISK_CACHE_PATH`.

Required when `TFE_RUN_PIPELINE_DRIVER` is `docker`.

## Kubernetes driver settings

### `TFE_RUN_PIPELINE_KUBERNETES_IMAGE_PULL_SECRET_NAME`

The name of an ImagePullSecret in the [namespace]-agents namespace to use when pulling the custom source tfc-agent image. If an ImagePullSecret is required to access a private repository you must create the secret within the [namespace]-agents namespace after this helm chart has installed, but before attempting a plan or apply. See Prerequisites for instructions for creating ImagePullSecrets.

### `TFE_RUN_PIPELINE_KUBERNETES_KUBECONFIG_PATH`

The path to a Kubernetes configuration file.

### `TFE_RUN_PIPELINE_KUBERNETES_NAMESPACE`

The Kubernetes namespace to create ephemeral run containers. Defaults to
`default`.

### `TFE_RUN_PIPELINE_KUBERNETES_OPEN_SHIFT_ENABLED`

A feature toggle to enable or disable compatibility with an OpenShift runtime
environment. Defaults to `false`.

### `TFE_RUN_PIPELINE_KUBERNETES_DEBUG_ENABLED`

Boolean flag that will delay the deletion of jobs from the cluster for their inspection.

### `TFE_RUN_PIPELINE_KUBERNETES_DEBUG_JOBS_TTL`

Time in seconds after which the jobs delayed by the `TFE_RUN_PIPELINE_KUBERNETES_DEBUG_ENABLED` flag will get deleted. Defaults to 86400, 1 day.

### `TFE_RUN_PIPELINE_KUBERNETES_POD_TEMPLATE`

This is a base64-encoded custom pod template in JSON format, equivalent to Kubernetes' `corev1.PodTemplateSpec`, used in a job. The values here will override corresponding values from Terraform Enterprise configuration. Note that only one container is allowed in the pod template.

### `TFE_RUN_PIPELINE_KUBERNETES_WORKER_TIMEOUT`

Time in seconds after which Terraform Enterprise will fails jobs submitted to Kubernetes. Defaults to `60`.

## Nomad driver settings

### `TFE_RUN_PIPELINE_NOMAD_NAMESPACE`

The Nomad namespace where Terraform Enterprise agent job starts. Defaults to `tfe-agents`.

### `TFE_RUN_PIPELINE_NOMAD_AGENT_JOB_ID`

Specifies the ID of the batch job that runs the Terraform Enterprise agent. Defaults to `tfe-agent-job`.

### `TFE_RUN_PIPELINE_NOMAD_WORKER_TIMEOUT`

Max timeout in seconds used by Terraform Enterprise workers to connect with Nomad and start an agent job. Defaults to `60`.

## Proxy configuration

Terraform Enterprise relies on the native application runtime for setting proxy values. For configuring proxies in Docker,
refer to the official [Docker proxy configuration guide](https://docs.docker.com/network/proxy/). For Kubernetes, refer to the
[Kubernetes proxy configuration guide](https://kubernetes.io/docs/concepts/cluster-administration/proxies/). For Nomad deployments, refer to the [reference architecture guide](/terraform/enterprise/deploy/replicated/architecture/reference-architecture)

## Replicated to flexible deployments configuration mapping

The following table describes how the Replicated configuration maps to the configuration settings for non-Replicated deployments. Refer to [settings](#application-settings) for more information about the variables.

| Replicated                  | Non-Replicated                                                                                         |
| --------------------------- | ------------------------------------------------------------------------------------------------------------------- |
| aws_access_key_id           | [TFE_OBJECT_STORAGE_S3_ACCESS_KEY_ID](#tfe_object_storage_s3_access_key_id)                                         |
| aws_instance_profile        | [TFE_OBJECT_STORAGE_S3_USE_INSTANCE_PROFILE](#tfe_object_storage_s3_use_instance_profile)                           |
| aws_secret_access_key       | [TFE_OBJECT_STORAGE_S3_SECRET_ACCESS_KEY](#tfe_object_storage_s3_secret_access_key)                                 |
| azure_account_key           | [TFE_OBJECT_STORAGE_AZURE_ACCOUNT_KEY](#tfe_object_storage_azure_account_key)                                       |
| azure_account_name          | [TFE_OBJECT_STORAGE_AZURE_ACCOUNT_NAME](#tfe_object_storage_azure_account_name)                                     |
| azure_client_id             | [TFE_OBJECT_STORAGE_AZURE_CLIENT_ID](#tfe_object_storage_azure_client_id)                                           |
| azure_container             | [TFE_OBJECT_STORAGE_AZURE_CONTAINER](#tfe_object_storage_azure_container)                                           |
| azure_endpoint              | [TFE_OBJECT_STORAGE_AZURE_ENDPOINT](#tfe_object_storage_azure_endpoint)                                             |
| azure_use_msi               | [TFE_OBJECT_STORAGE_AZURE_USE_MSI](#tfe_object_storage_azure_use_msi)                                               |
| backup_token                | [TFE_BACKUP_RESTORE_TOKEN](#tfe_backup_restore_token)                                                               |
| capacity_concurrency        | [TFE_CAPACITY_CONCURRENCY](#tfe_capacity_concurrency)                                                               |
| capacity_cpus               | [TFE_CAPACITY_CPU](#tfe_capacity_cpu)                                                                               |
| capacity_memory             | [TFE_CAPACITY_MEMORY](#tfe_capacity_memory)                                                                         |
| custom_agent_image_tag      | [TFE_RUN_PIPELINE_IMAGE](#tfe_run_pipeline_image)                                                                   |
| disk_path                   | [TFE_DISK_PATH](#tfe_disk_path)                                                                                     |
| enable_active_active        | [TFE_OPERATIONAL_MODE](#tfe_operational_mode)                                                                       |
| enc_password                | [TFE_ENCRYPTION_PASSWORD](#tfe_encryption_password)                                                                 |
| extern_vault_addr           | [TFE_VAULT_ADDRESS](#tfe_vault_address)                                                                             |
| extern_vault_namespace      | [TFE_VAULT_NAMESPACE](#tfe_vault_namespace)                                                                         |
| extern_vault_path           | [TFE_VAULT_PATH](#tfe_vault_path)                                                                                   |
| extern_vault_role_id        | [TFE_VAULT_ROLE_ID](#tfe_vault_role_id)                                                                             |
| extern_vault_secret_id      | [TFE_VAULT_SECRET_ID](#tfe_vault_secret_id)                                                                         |
| extern_vault_token_renew    | [TFE_VAULT_TOKEN_RENEW](#tfe_vault_token_renew)                                                                     |
| force_tls                   | [TFE_TLS_ENFORCE](#tfe_tls_enforce)                                                                                 |
| gcs_bucket                  | [TFE_OBJECT_STORAGE_GOOGLE_BUCKET](#tfe_object_storage_google_bucket)                                               |
| gcs_credentials             | [TFE_OBJECT_STORAGE_GOOGLE_CREDENTIALS](#tfe_object_storage_google_credentials)                                     |
| gcs_project                 | [TFE_OBJECT_STORAGE_GOOGLE_PROJECT](#tfe_object_storage_google_project)                                             |
| hostname                    | [TFE_HOSTNAME](#tfe_hostname)                                                                                       |
| iact_subnet_list            | [TFE_IACT_SUBNETS](#tfe_iact_subnets)                                                                               |
| iact_subnet_time_limit      | [TFE_IACT_TIME_LIMIT](#tfe_iact_time_limit)                                                                         |
| log_forwarding_config       | [TFE_LOG_FORWARDING_CONFIG_PATH](#tfe_log_forwarding_config_path)                                                   |
| log_forwarding_enabled      | [TFE_LOG_FORWARDING_ENABLED](#tfe_log_forwarding_enabled)                                                           |
| metrics_endpoint_enabled    | [TFE_METRICS_ENABLE](#tfe_metrics_enable)                                                                           |
| metrics_endpoint_port_http  | [TFE_METRICS_HTTP_PORT](#tfe_metrics_http_port)                                                                     |
| metrics_endpoint_port_https | [TFE_METRICS_HTTPS_PORT](#tfe_metrics_https_port)                                                                   |
| optout_license_reporting    | [TFE_LICENSE_REPORTING_OPT_OUT](#tfe_license_reporting_opt_out)                                                     |
| optout_usage_reporting      | [TFE_USAGE_REPORTING_OPT_OUT](#tfe_usage_reporting_opt_out)                                                         |
| pg_dbname                   | [TFE_DATABASE_NAME](#tfe_database_name)                                                                             |
| pg_extra_params             | [TFE_DATABASE_PARAMETERS](#tfe_database_parameters)                                                                 |
| pg_netloc                   | [TFE_DATABASE_HOST](#tfe_database_host)                                                                             |
| pg_password                 | [TFE_DATABASE_PASSWORD](#tfe_database_password)                                                                     |
| pg_user                     | [TFE_DATABASE_USER](#tfe_database_user)                                                                             |
| placement                   | [TFE_OBJECT_STORAGE_TYPE](#tfe_object_storage_type)                                                                 |
| production_type             | [TFE_OPERATIONAL_MODE](#tfe_operational_mode)                                                                       |
| redis_host                  | [TFE_REDIS_HOST](#tfe_redis_host)                                                                                   |
| redis_pass                  | [TFE_REDIS_PASSWORD](#tfe_redis_password)                                                                           |
| redis_port                  | [TFE_REDIS_HOST](#tfe_redis_host)                                                                                   |
| redis_use_password_auth     | [TFE_REDIS_USE_AUTH](#tfe_redis_use_auth)                                                                           |
| redis_use_tls               | [TFE_REDIS_USE_TLS](#tfe_redis_use_tls)                                                                             |
| s3_bucket                   | [TFE_OBJECT_STORAGE_S3_BUCKET](#tfe_object_storage_s3_bucket)                                                       |
| s3_endpoint                 | [TFE_OBJECT_STORAGE_S3_ENDPOINT](#tfe_object_storage_s3_endpoint)                                                   |
| s3_region                   | [TFE_OBJECT_STORAGE_S3_REGION](#tfe_object_storage_s3_region)                                                       |
| s3_sse                      | [TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION](#tfe_object_storage_s3_server_side_encryption)                       |
| s3_sse_kms_key_id           | [TFE_OBJECT_STORAGE_S3_SERVER_SIDE_ENCRYPTION_KMS_KEY_ID](#tfe_object_storage_s3_server_side_encryption_kms_key_id) |
| tls_ciphers                 | [TFE_TLS_CIPHERS](#tfe_tls_ciphers)                                                                                 |
| tls_vers                    | [TFE_TLS_VERSION](#tfe_tls_version)                                                                                 |
